--- a/app/src/main/res/layout/fragment_my_page.xml
+++ b/app/src/main/res/layout/fragment_my_page.xml
@@ -16,6 +16,7 @@
         tools:context=".presentation.myPage.MyPageFragment">
 
         <ScrollView
+            android:id="@+id/sv_my_page"
             android:layout_width="0dp"
             android:layout_height="0dp"
             app:layout_constraintBottom_toBottomOf="parent"
