[feat] #11 Home FAB 디자인

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -35,5 +35,22 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/fab_home_add_friend"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="@dimen/spacing16"
+            android:layout_marginBottom="@dimen/spacing16"
+            android:backgroundTint="@color/white"
+            android:src="@drawable/ic_add_gray_400_24"
+            app:backgroundTint="@color/gray_400"
+            app:borderWidth="2dp"
+            app:elevation="0dp"
+            app:fabSize="normal"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:rippleColor="@android:color/transparent"
+            app:tint="@null" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
