--- a/app/src/main/res/layout/dialog_do_sopt.xml
+++ b/app/src/main/res/layout/dialog_do_sopt.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
 
@@ -36,75 +37,75 @@
                 app:layout_constraintGuide_end="@dimen/spacing20" />
 
             <ImageView
-                android:id="@+id/iv_logout_dialog_icon"
+                android:id="@+id/iv_do_sopt_dialog_icon"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
-                android:src="@drawable/ic_sad_24"
                 app:layout_constraintEnd_toStartOf="@+id/gl_end"
                 app:layout_constraintStart_toStartOf="@+id/gl_start"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent"
+                tools:src="@drawable/ic_sad_24" />
 
             <TextView
-                android:id="@+id/tv_logout_dialog_title"
+                android:id="@+id/tv_do_sopt_dialog_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
-                android:text="@string/logout"
                 android:textAppearance="@style/TextAppearance.Title"
                 android:textColor="@color/gray_600"
                 app:layout_constraintEnd_toStartOf="@+id/gl_end"
                 app:layout_constraintStart_toStartOf="@+id/gl_start"
-                app:layout_constraintTop_toBottomOf="@id/iv_logout_dialog_icon" />
+                app:layout_constraintTop_toBottomOf="@id/iv_do_sopt_dialog_icon"
+                tools:text="@string/logout" />
 
             <TextView
-                android:id="@+id/tv_logout_dialog_context"
+                android:id="@+id/tv_do_sopt_dialog_context"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
                 android:gravity="center"
-                android:text="@string/logout_dialog_context"
                 android:textAppearance="@style/TextAppearance.Body"
                 android:textColor="@color/gray_400"
                 app:layout_constraintEnd_toStartOf="@+id/gl_end"
                 app:layout_constraintStart_toStartOf="@+id/gl_start"
-                app:layout_constraintTop_toBottomOf="@id/tv_logout_dialog_title" />
+                app:layout_constraintTop_toBottomOf="@id/tv_do_sopt_dialog_title"
+                tools:text="@string/logout_dialog_context" />
 
             <com.google.android.material.button.MaterialButton
-                android:id="@+id/btn_logout_dialog_yes"
+                android:id="@+id/btn_do_sopt_dialog_left"
                 style="@style/Widget.Material.Button.Basic"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="28dp"
                 android:layout_marginBottom="@dimen/spacing20"
                 android:height="44dp"
-                android:text="@string/dialog_yes"
                 android:textAppearance="@style/TextAppearance.Headline"
                 android:textColor="@color/gray_400"
                 app:backgroundTint="@color/gray_200"
                 app:cornerRadius="8dp"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toStartOf="@+id/btn_logout_dialog_no"
+                app:layout_constraintEnd_toStartOf="@+id/btn_do_sopt_dialog_right"
                 app:layout_constraintStart_toStartOf="@id/gl_start"
-                app:layout_constraintTop_toBottomOf="@id/tv_logout_dialog_context" />
+                app:layout_constraintTop_toBottomOf="@id/tv_do_sopt_dialog_context"
+                tools:text="@string/dialog_yes" />
 
             <com.google.android.material.button.MaterialButton
-                android:id="@+id/btn_logout_dialog_no"
+                android:id="@+id/btn_do_sopt_dialog_right"
                 style="@style/Widget.Material.Button.Basic"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="12dp"
                 android:height="44dp"
-                android:text="@string/dialog_no"
                 android:textAppearance="@style/TextAppearance.Headline"
                 android:textColor="@color/white"
                 app:backgroundTint="@color/main_2"
                 app:cornerRadius="8dp"
-                app:layout_constraintBottom_toBottomOf="@+id/btn_logout_dialog_yes"
+                app:layout_constraintBottom_toBottomOf="@+id/btn_do_sopt_dialog_left"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/gl_end"
-                app:layout_constraintStart_toEndOf="@+id/btn_logout_dialog_yes"
-                app:layout_constraintTop_toTopOf="@+id/btn_logout_dialog_yes" />
+                app:layout_constraintStart_toEndOf="@+id/btn_do_sopt_dialog_left"
+                app:layout_constraintTop_toTopOf="@+id/btn_do_sopt_dialog_left"
+                tools:text="@string/dialog_no" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
