--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -18,4 +18,19 @@
     <style name="ShapeAppearanceOverlay.App.CornerSize40Percent" parent="">
         <item name="cornerSize">40%</item>
     </style>
+
+    <style name="CustomTextInputLayout.Main3" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox">
+        <item name="hintAnimationEnabled">false</item>
+        <item name="colorControlNormal">@color/gray_300</item>
+        <item name="colorControlActivated">@color/main_3</item>
+        <item name="android:textColorHint">@color/gray_300</item>
+        <item name="hintTextColor">@color/main_3</item>
+        <item name="boxStrokeColor">@color/main_3</item>
+        <item name="boxStrokeWidth">2dp</item>
+        <item name="android:textCursorDrawable">@color/main_3</item>
+        <item name="boxCornerRadiusTopStart">@dimen/spacing10</item>
+        <item name="boxCornerRadiusTopEnd">@dimen/spacing10</item>
+        <item name="boxCornerRadiusBottomStart">@dimen/spacing10</item>
+        <item name="boxCornerRadiusBottomEnd">@dimen/spacing10</item>
+    </style>
 </resources>
