--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -63,17 +63,26 @@
                     app:layout_constraintStart_toStartOf="@id/tv_sign_in_title"
                     app:layout_constraintTop_toBottomOf="@id/tv_sign_in_title" />
 
-                <EditText
-                    android:id="@+id/et_sign_in_id"
+                <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/layout_sign_in_id"
+                    style="@style/CustomTextInputLayout.Main3"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/spacing4"
-                    android:hint="@string/sign_id_hint"
-                    android:inputType="text"
-                    android:textAppearance="@style/TextAppearance.Body"
-                    app:layout_constraintEnd_toEndOf="@id/tv_sign_in_title"
-                    app:layout_constraintStart_toStartOf="@id/tv_sign_in_id"
-                    app:layout_constraintTop_toBottomOf="@id/tv_sign_in_id" />
+                    android:theme="@style/CustomTextInputLayout.Main3"
+                    app:layout_constraintEnd_toEndOf="@id/gl_end"
+                    app:layout_constraintStart_toStartOf="@id/gl_start"
+                    app:layout_constraintTop_toBottomOf="@id/tv_sign_in_id">
+
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/et_sign_in_id"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="@dimen/spacing4"
+                        android:hint="@string/sign_id_hint"
+                        android:inputType="text"
+                        android:textAppearance="@style/TextAppearance.Body" />
+
+                </com.google.android.material.textfield.TextInputLayout>
 
                 <TextView
                     android:id="@+id/tv_sign_in_password"
@@ -82,23 +91,30 @@
                     android:layout_marginTop="@dimen/spacing24"
                     android:text="@string/sign_password"
                     android:textAppearance="@style/TextAppearance.Title"
-                    app:layout_constraintStart_toStartOf="@id/et_sign_in_id"
-                    app:layout_constraintTop_toBottomOf="@id/et_sign_in_id" />
+                    app:layout_constraintStart_toStartOf="@id/layout_sign_in_id"
+                    app:layout_constraintTop_toBottomOf="@id/layout_sign_in_id" />
 
-                <EditText
-                    android:id="@+id/et_sign_in_password"
+                <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/layout_sign_in_password"
+                    style="@style/CustomTextInputLayout.Main3"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="4dp"
-                    android:layout_marginBottom="@dimen/spacing30"
-                    android:hint="@string/sign_password_hint"
-                    android:inputType="textPassword"
-                    android:textAppearance="@style/TextAppearance.Body"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="@id/et_sign_in_id"
-                    app:layout_constraintStart_toStartOf="@id/et_sign_in_id"
-                    app:layout_constraintTop_toBottomOf="@id/tv_sign_in_password"
-                    app:layout_constraintVertical_bias="1.0" />
+                    android:theme="@style/CustomTextInputLayout.Main3"
+                    app:layout_constraintEnd_toEndOf="@id/layout_sign_in_id"
+                    app:layout_constraintStart_toStartOf="@id/layout_sign_in_id"
+                    app:layout_constraintTop_toBottomOf="@id/tv_sign_in_password">
+
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/et_sign_in_password"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="4dp"
+                        android:layout_marginBottom="@dimen/spacing30"
+                        android:hint="@string/sign_password_hint"
+                        android:inputType="textPassword"
+                        android:textAppearance="@style/TextAppearance.Body" />
+
+                </com.google.android.material.textfield.TextInputLayout>
 
             </androidx.constraintlayout.widget.ConstraintLayout>
         </ScrollView>
